[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/game/Game.gd" type="Script" id=2]
[ext_resource path="res://scenes/game/Player.tscn" type="PackedScene" id=4]

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("AircraftContainer/Player:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 240, 1000 ) ]
}

[sub_resource type="Animation" id=1]
resource_name = "showPlayer"
tracks/0/type = "value"
tracks/0/path = NodePath("AircraftContainer/Player:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 240, 1000 ), Vector2( 240, 750 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.9 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "on_player_ready"
} ]
}

[node name="Game" type="Node2D"]
script = ExtResource( 2 )

[node name="AircraftContainer" type="Node2D" parent="."]

[node name="Player" parent="AircraftContainer" instance=ExtResource( 4 )]
position = Vector2( 240, 1000 )

[node name="BulletContainer" type="Node2D" parent="."]

[node name="SupplyContainer" type="Node2D" parent="."]

[node name="FxContainer" type="Node2D" parent="."]

[node name="SpawnPos" type="Position2D" parent="."]
position = Vector2( 240, -112 )

[node name="EnemySpawnTimer" type="Timer" parent="."]
wait_time = 0.75
autostart = true

[node name="SupplySpawnTimer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "showPlayer"
anims/RESET = SubResource( 2 )
anims/showPlayer = SubResource( 1 )

[connection signal="timeout" from="EnemySpawnTimer" to="." method="_on_EnemySpawnTimer_timeout"]
[connection signal="timeout" from="SupplySpawnTimer" to="." method="_on_SupplySpawnTimer_timeout"]
